--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -11,6 +11,10 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Messages</a>
       </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="#" (click)="logout()">Log Out</a>
+      </li>
     </ul>
 
     <div *ngIf="loggedIn()" class="dropdown">
